fix: Correção implementação S3 StorageProvider